Fix readability issues with dates when in mobile view

--- a/src/index.scss
+++ b/src/index.scss
@@ -138,6 +138,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
 
   .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
     color: gray;
+    font-weight: bold;
   }
 
   .vertical-timeline-element-content-arrow {
@@ -212,7 +213,8 @@ p, a, h1, h2, h3, h4, h5, label, button {
   }
 
   .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
-    color: lightgray;
+    color: gray;
+    font-weight: bold;
   }
 
   .vertical-timeline-element-content-arrow {
